[package]
name = "login-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-argon2 = "1.0.0"
inquire = "0.2.1"
ring = "0.16.20"
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"